@@ -1,6 +1,7 @@
 ABI Issues:
 
-Remove extra signatures in cl_FF_from_float.cc and cl_DF_from_double.cc.
+Remove extra signatures in cl_FF_from_float.cc, cl_DF_from_double.cc,
+cl_F_readparsed.cc, cl_I_readparsed.cc, and cl_RA_readparsed.cc.
 
 
 Algorithms:
